--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,12 @@ license = "ISC"
 
 description = "An adapter to use webview GUIs with NIH-plug"
 
-[workspace]
-members = [
-  "example",
-  "xtask"
-]
-
 [dependencies]
 nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
+wry = { git = "https://github.com/tauri-apps/wry", tag = "wry-v0.35.2" }
 parking_lot = "0.12.1"
 serde_json = "1.0"
-wry = { git = "https://github.com/maxjvh/wry" }
-baseview = { git = "https://github.com/ilmai/baseview", branch = "drag-and-drop-mac" }
-raw-window-handle = "0.4.2"
+serde = "1.0.194"
+baseview = { git = "https://github.com/RustAudio/baseview" }
 crossbeam = "0.8.2"
 keyboard-types = "0.6.2"
