--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = "1.0.194"
 baseview = { git = "https://github.com/RustAudio/baseview" }
 crossbeam = "0.8.2"
 keyboard-types = "0.6.2"
+mime_guess = "2.0.4"
