--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ license = "ISC"
 description = "An adapter to use webview GUIs with NIH-plug"
 
 [dependencies]
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
-wry = { git = "https://github.com/tauri-apps/wry", tag = "wry-v0.35.2" }
-parking_lot = "0.12.1"
-serde_json = "1.0"
-serde = "1.0.194"
-baseview = { git = "https://github.com/RustAudio/baseview" }
-crossbeam = "0.8.2"
-keyboard-types = "0.6.2"
-mime_guess = "2.0.4"
+nih_plug = { workspace = true }
+wry = { workspace = true }
+parking_lot = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+baseview = { workspace = true }
+crossbeam = { workspace = true }
+keyboard-types = { workspace = true }
+mime_guess = { workspace = true }
