upgrade wry tp 0.45.0, fix borrow-error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,20 @@ license = "ISC"
 description = "An adapter to build webview GUIs with NIH-plug"
 
 [dependencies]
-baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "2c1b1a7b0fef1a29a5150a6a8f6fef6a0cbab8c4" }
+baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "cd4df61" }
 crossbeam = "0.8.2"
 keyboard-types = "0.6.2"
 mime_guess = "2.0.4"
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "bb274976ca138289436b0bfa209b2c8c13244225", default-features = false }
+nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1", default-features = false }
 serde = "1.0.197"
 serde_json = "1.0.115"
-wry = { git = "https://github.com/tauri-apps/wry", tag = "wry-v0.35.2" }
+wry = "0.45.0"
+
+raw-window-handle = "0.6.2"
+raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.2" }
+
 
 [dev-dependencies]
-nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "bb274976ca138289436b0bfa209b2c8c13244225", features = [
+nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1", features = [
     "standalone",
 ] }
