--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,20 @@ authors = [
     "Max Huttunen <max.huttunen@gmail.com>",
 ]
 license = "ISC"
-description = "An adapter to build webview GUIs with NIH-plug"
+description = "An adapter to build editor GUIs with nih-plug using web-based tools"
 
 [dependencies]
+
+base64 = "0.22.1"
 baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "cd4df61" }
-crossbeam = "0.8.2"
+crossbeam = "0.8.4"
 keyboard-types = "0.6.2"
 mime_guess = "2.0.4"
 nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1", default-features = false }
-serde = "1.0.197"
-serde_json = "1.0.115"
-wry = "0.45.0"
-
 raw-window-handle = "0.6.2"
 raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.2" }
+serde = ">=1.0"
+wry = "0.45.0"
 
 
 [dev-dependencies]
