--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1
 raw-window-handle = "0.6.2"
 raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.2" }
 serde = ">=1.0"
-wry = { path = "wry" }
+wry = { path = "wry", features = ["tracing"] }
 log = "0.4"
 objc2 = "0.6.0"
 objc2-app-kit = "0.3.0"
